--- a/src/register.html
+++ b/src/register.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registrierung</title>
-    <link href="../dist/output.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100 h-screen flex items-center justify-center">
+    <link href="../dist/output.css" rel="stylesheet" />
+  </head>
+  <body class="bg-gray-100 h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded shadow-md w-96">
-        <h1 class="text-2xl font-semibold mb-4">Registrierung</h1>
-        <form id="registerForm">
-            <div class="mb-4">
-                <label for="newFirstName" class="block text-gray-700">Vorname:</label>
-                <input type="text" id="newFirstName" name="newFirstName" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mb-4">
-                <label for="newLastName" class="block text-gray-700">Nachname:</label>
-                <input type="text" id="newLastName" name="newLastName" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mb-4">
-                <label for="newEmail" class="block text-gray-700">E-Mail:</label>
-                <input type="email" id="newEmail" name="newEmail" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mb-4">
-                <label for="newUsername" class="block text-gray-700">Benutzername:</label>
-                <input type="text" id="newUsername" name="newUsername" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mb-4">
-                <label for="newPassword" class="block text-gray-700">Passwort:</label>
-                <input type="password" id="newPassword" name="newPassword" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mb-4">
-                <label for="confirmPassword" class="block text-gray-700">Passwort bestätigen:</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mt-4">
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Registrieren</button>
-            </div>
-        </form>
-        <p class="mt-4">Bereits einen Account? <a href="login.html" class="text-blue-500">Anmelden</a></p>
+      <h1 class="text-2xl font-semibold mb-4">Registrierung</h1>
+      <form id="registerForm">
+        <div class="mb-4">
+          <label for="newFirstName" class="block text-gray-700">Vorname:</label>
+          <input type="text" id="newFirstName" name="newFirstName" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mb-4">
+          <label for="newLastName" class="block text-gray-700">Nachname:</label>
+          <input type="text" id="newLastName" name="newLastName" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mb-4">
+          <label for="newEmail" class="block text-gray-700">E-Mail:</label>
+          <input type="email" id="newEmail" name="newEmail" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mb-4">
+          <label for="newUsername" class="block text-gray-700">Benutzername:</label>
+          <input type="text" id="newUsername" name="newUsername" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mb-4">
+          <label for="newPassword" class="block text-gray-700">Passwort: <span title="Password must be at least 8 characters long and include at least one letter and one number.">ℹ️</span></label>
+          <input type="password" id="newPassword" name="newPassword" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mb-4">
+          <label for="confirmPassword" class="block text-gray-700">Passwort bestätigen:</label>
+          <input type="password" id="confirmPassword" name="confirmPassword" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mt-4">
+          <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Registrieren</button>
+        </div>
+      </form>
+      <p class="mt-4">Bereits einen Account? <a href="login.html" class="text-blue-500">Anmelden</a></p>
     </div>
 
     <script src="register.js"></script>
-</body>
+  </body>
 </html>
