unified design pattern

--- a/src/register.html
+++ b/src/register.html
@@ -6,7 +6,10 @@
     <title>Registrierung</title>
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
-  <body class="bg-gray-100 h-screen flex items-center justify-center">
+  <body class="bg-gray-100 h-screen flex">
+    <div class="left-column">
+      <a href="index.html">Back</a>
+    </div>
     <div class="bg-white p-8 rounded shadow-md w-96">
       <h1 class="text-2xl font-semibold mb-4">Registrierung</h1>
       <form id="registerForm">
