--- a/src/login.html
+++ b/src/login.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link href="/dist/output.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100 h-screen flex items-center justify-center">
+    <link href="../dist/output.css" rel="stylesheet" />
+  </head>
+  <body class="bg-gray-100 h-screen flex">
+    <div class="left-column">
+      <a href="index.html">Back</a>
+    </div>
     <div class="bg-white p-8 rounded shadow-md w-96">
-        <h1 class="text-2xl font-semibold mb-4">Login</h1>
-        <form id="loginForm">
-            <div class="mb-4">
-                <label for="username" class="block text-gray-700">Benutzername:</label>
-                <input type="text" id="username" name="username" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mb-4">
-                <label for="password" class="block text-gray-700">Passwort:</label>
-                <input type="password" id="password" name="password" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required>
-            </div>
-            <div class="mt-4">
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Anmelden</button>
-            </div>
-        </form>
-        <p class="mt-4">Noch keinen Account? <a href="register.html" class="text-blue-500">Registrieren</a></p>
+      <h1 class="text-2xl font-semibold mb-4">Login</h1>
+      <form id="loginForm">
+        <div class="mb-4">
+          <label for="username" class="block text-gray-700">Benutzername:</label>
+          <input type="text" id="username" name="username" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mb-4">
+          <label for="password" class="block text-gray-700">Passwort:</label>
+          <input type="password" id="password" name="password" class="border border-blue-500 border-opacity-50 rounded form-input mt-1 block w-full" required />
+        </div>
+        <div class="mt-4">
+          <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Anmelden</button>
+        </div>
+      </form>
+      <p class="mt-4">Noch keinen Account? <a href="register.html" class="text-blue-500">Registrieren</a></p>
     </div>
 
     <script src="login.js"></script>
-</body>
+  </body>
 </html>
