fixed burger menu

--- a/src/login.html
+++ b/src/login.html
@@ -67,7 +67,7 @@
           <h2 class="text-gray-700 text-6xl font-semibold">Login</h2>
         </header>
 
-        <div class="">
+        <div class="max-w-md">
           <form id="loginForm">
             <div class="mb-4">
               <label for="username" class="block text-gray-700">Username:</label>
@@ -84,7 +84,7 @@
           <p class="mt-4">No Account? <a href="register.html" class="text-primary">Sign up!</a></p>
         </div>
       </main>
-
+      <script src="index.js"></script>
       <script src="login.js"></script>
     </div>
   </body>
