--- a/src/register.html
+++ b/src/register.html
@@ -67,7 +67,7 @@
           <h2 class="text-gray-700 text-6xl font-semibold">Sign Up</h2>
         </header>
 
-        <div class="">
+        <div class="max-w-md">
           <form id="registerForm">
             <div class="mb-4">
               <label for="newFirstName" class="block text-gray-700">First Name:</label>
@@ -86,7 +86,13 @@
               <input type="text" id="newUsername" name="newUsername" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
-              <label for="newPassword" class="block text-gray-700">Password: <span title="Password must be at least 8 characters long and include at least one letter and one number.">ℹ️</span></label>
+              <label class="flex" for="newPassword" class="block text-gray-700"
+                >Password:
+                <span title="Password must be at least 8 characters long and include at least one letter and one number."
+                  ><svg class="w-5 ml-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
+                  </svg> </span
+              ></label>
               <input type="password" id="newPassword" name="newPassword" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
@@ -101,6 +107,7 @@
         </div>
       </main>
       <script src="register.js"></script>
+      <script src="index.js"></script>
     </div>
   </body>
 </html>
