--- a/src/register.html
+++ b/src/register.html
@@ -64,7 +64,7 @@
         </div>
 
         <header>
-          <h2 class="text-gray-700 text-6xl font-semibold">Sign Up</h2>
+          <h2 class="text-gray-700 text-6xl font-semibold mb-3">Sign Up</h2>
         </header>
 
         <div class="max-w-md">
