changed register title

--- a/src/register.html
+++ b/src/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login- RealEstateCrawler</title>
+    <title>Sign up - RealEstateCrawler</title>
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
   <body class="h-screen flex font-montserrat">
