--- a/src/index.html
+++ b/src/index.html
@@ -20,19 +20,53 @@
         </header>
 
         <div class="">
-          <form id="searchForm" class="mb-6 mt-4">
-            <!-- Input fields for search parameters -->
-            <label for="pricePerM2" class="block text-gray-700 mb-1">Price per m2:</label>
-            <input type="text" id="pricePerM2" placeholder="Price per m2" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-4" />
-
-            <label for="district" class="block text-gray-700 mb-1">District:</label>
-            <input type="text" id="district" placeholder="District" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-4" />
-
-            <label for="size" class="block text-gray-700 mb-1">Size:</label>
-            <input type="text" id="size" placeholder="Size" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-4" />
+          <form id="searchForm" class="w-full max-w-lg mb-6 mt-4">
+            <div class="flex flex-wrap -mx-3 mb-4">
+              <div class="w-full px-3">
+                <label for="searchTitle" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Title for search agent</label>
+                <input type="text" id="searchTitle" placeholder="Enter a title for your search agent" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+              </div>
+            </div>
+            <div class="flex flex-wrap -mx-3 mb-4">
+              <div class="w-full md:w-1/2 px-3 md:mb-0">
+                <label for="minArea" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Minimum Area (m2)</label>
+                <input type="text" id="minArea" placeholder="Enter minimum area (e.g., 50)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+              </div>
+              <div class="w-full md:w-1/2 px-3">
+                <label for="maxPrice" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Maximum Price (€)</label>
+                <input type="text" id="maxPrice" placeholder="Enter maximum price (e.g., 500)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+              </div>
+            </div>
+            <div class="flex flex-wrap -mx-3 mb-4">
+              <div class="w-full md:w-1/2 px-3 md:mb-0 gap-1">
+                <label for="postalCode" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Postal Code</label>
+                <input type="text" id="postalCode" placeholder="Enter postal code (e.g., 1010)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+              </div>
+              <div class="w-full md:w-1/2 px-3">
+                <label for="state" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Federal Province</label>
+                <select id="state" class="border border-primary border-opacity-50 rounded form-select mt-1 block w-full mb-2">
+                  <option value="" disabled selected>Select Federal Province</option>
+                  <option value="Burgenland">Burgenland</option>
+                  <option value="Kärnten">Carinthia</option>
+                  <option value="Niederösterreich">Lower Austria</option>
+                  <option value="Oberösterreich">Upper Austria</option>
+                  <option value="Salzburg">Salzburg</option>
+                  <option value="Steiermark">Styria</option>
+                  <option value="Tirol">Tyrol</option>
+                  <option value="Vorarlberg">Vorarlberg</option>
+                  <option value="Wien">Vienna</option>
+                </select>
+              </div>
+            </div>
+            <div class="flex flex-wrap -mx-3 mb-4">
+              <div class="w-full px-3 mb-2">
+                <label for="numRooms" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Number of Rooms</label>
+                <input type="number" id="numRooms" placeholder="Enter number of rooms (e.g., 3)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+              </div>
+            </div>
             <!-- Add other search parameters -->
 
-            <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Search</button>
+            <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Create Searchagent</button>
           </form>
         </div>
       </main>
