changed css and search form

--- a/src/register.html
+++ b/src/register.html
@@ -15,40 +15,40 @@
         </div>
 
         <header>
-          <h2 class="text-gray-700 text-6xl font-semibold mb-3">Sign Up</h2>
+          <h2 class="text-gray-800 text-6xl font-semibold mb-3">Sign Up</h2>
         </header>
 
         <div class="max-w-md">
           <form id="registerForm">
             <div class="mb-4">
-              <label for="newFirstName" class="block text-gray-700">First Name:</label>
-              <input type="text" id="newFirstName" name="newFirstName" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <label for="newFirstName" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">First Name</label>
+              <input type="text" id="newFirstName" name="newFirstName" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
-              <label for="newLastName" class="block text-gray-700">Last Name:</label>
-              <input type="text" id="newLastName" name="newLastName" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <label for="newLastName" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Last Name</label>
+              <input type="text" id="newLastName" name="newLastName" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
-              <label for="newEmail" class="block text-gray-700">E-Mail:</label>
-              <input type="email" id="newEmail" name="newEmail" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <label for="newEmail" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">E-Mail</label>
+              <input type="email" id="newEmail" name="newEmail" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
-              <label for="newUsername" class="block text-gray-700">Username:</label>
-              <input type="text" id="newUsername" name="newUsername" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <label for="newUsername" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Username</label>
+              <input type="text" id="newUsername" name="newUsername" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
-              <label class="flex" for="newPassword" class="block text-gray-700"
-                >Password:
+              <label for="newPassword" class="flex text-gray-800 mb-1 uppercase tracking-wide font-bold"
+                >Password
                 <span title="Password must be at least 8 characters long and include at least one letter and one number."
                   ><svg class="w-5 ml-1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
                   </svg> </span
               ></label>
-              <input type="password" id="newPassword" name="newPassword" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <input type="password" id="newPassword" name="newPassword" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
-              <label for="confirmPassword" class="block text-gray-700">Confirm Password:</label>
-              <input type="password" id="confirmPassword" name="confirmPassword" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <label for="confirmPassword" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Confirm Password</label>
+              <input type="password" id="confirmPassword" name="confirmPassword" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mt-4">
               <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Sign Up</button>
