--- a/src/settings.html
+++ b/src/settings.html
@@ -15,8 +15,7 @@
           </div>
   
           <header>
-            <h2 class="text-gray-700 text-6xl font-semibold">Create a Search Agent</h2>
-            <h3 class="text-2xl font-semibold border-b border-gray-200">to find your dream apartment in Austria</h3>
+            <h2 class="text-gray-800 text-6xl font-semibold">Settings</h2>
           </header>
   </body>
   <script>
