--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <header>
-          <h2 class="text-gray-700 text-6xl font-semibold">Create a Search Agent</h2>
+          <h2 class="text-gray-800 text-6xl font-semibold">Create a Search Agent</h2>
           <h3 class="text-2xl font-semibold border-b border-gray-200">to find your dream apartment in Austria</h3>
         </header>
 
@@ -23,28 +23,28 @@
           <form id="searchForm" class="w-full max-w-lg mb-6 mt-4">
             <div class="flex flex-wrap -mx-3 mb-4">
               <div class="w-full px-3">
-                <label for="searchTitle" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Title for search agent</label>
-                <input type="text" id="searchTitle" placeholder="Enter a title for your search agent" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+                <label for="agentName" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Name for search agent</label>
+                <input type="text" id="agentName" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
               </div>
             </div>
             <div class="flex flex-wrap -mx-3 mb-4">
               <div class="w-full md:w-1/2 px-3 md:mb-0">
-                <label for="minArea" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Minimum Area (m2)</label>
-                <input type="text" id="minArea" placeholder="Enter minimum area (e.g., 50)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+                <label for="minArea" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Minimum Area (m2)</label>
+                <input type="text" id="minArea" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block mb-2" />
               </div>
               <div class="w-full md:w-1/2 px-3">
-                <label for="maxPrice" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Maximum Price (€)</label>
-                <input type="text" id="maxPrice" placeholder="Enter maximum price (e.g., 500)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+                <label for="maxPrice" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Maximum Price (€)</label>
+                <input type="text" id="maxPrice" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block mb-2" />
               </div>
             </div>
             <div class="flex flex-wrap -mx-3 mb-4">
-              <div class="w-full md:w-1/2 px-3 md:mb-0 gap-1">
-                <label for="postalCode" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Postal Code</label>
-                <input type="text" id="postalCode" placeholder="Enter postal code (e.g., 1010)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+              <div class="w-full md:w-1/2 px-3 md:mb-0">
+                <label for="postalCode" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Postal Code</label>
+                <input type="text" id="postalCode" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block mb-2" />
               </div>
               <div class="w-full md:w-1/2 px-3">
-                <label for="state" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Federal Province</label>
-                <select id="state" class="border border-primary border-opacity-50 rounded form-select mt-1 block w-full mb-2">
+                <label for="state" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Federal Province</label>
+                <select id="state" class="border-2 border-primary border-opacity-50 rounded form-select mt-1 block mb-2">
                   <option value="" disabled selected>Select Federal Province</option>
                   <option value="Burgenland">Burgenland</option>
                   <option value="Kärnten">Carinthia</option>
@@ -60,8 +60,8 @@
             </div>
             <div class="flex flex-wrap -mx-3 mb-4">
               <div class="w-full px-3 mb-2">
-                <label for="numRooms" class="block text-gray-700 mb-1 uppercase tracking-wide font-bold">Number of Rooms</label>
-                <input type="number" id="numRooms" placeholder="Enter number of rooms (e.g., 3)" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
+                <label for="numRooms" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Number of Rooms</label>
+                <input type="number" id="numRooms" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
               </div>
             </div>
             <!-- Add other search parameters -->
