--- a/src/login.html
+++ b/src/login.html
@@ -15,18 +15,18 @@
         </div>
 
         <header>
-          <h2 class="text-gray-700 text-6xl font-semibold mb-3">Login</h2>
+          <h2 class="text-gray-800 text-6xl font-semibold mb-3">Login</h2>
         </header>
 
         <div class="max-w-md">
           <form id="loginForm">
             <div class="mb-4">
-              <label for="username" class="block text-gray-700">Username:</label>
-              <input type="text" id="username" name="username" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <label for="username" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Username</label>
+              <input type="text" id="username" name="username" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mb-4">
-              <label for="password" class="block text-gray-700">Password:</label>
-              <input type="password" id="password" name="password" class="border border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
+              <label for="password" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Password</label>
+              <input type="password" id="password" name="password" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full" required />
             </div>
             <div class="mt-4">
               <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Log in</button>
