--- a/src/imprint.html
+++ b/src/imprint.html
@@ -9,9 +9,8 @@
   <body class="h-screen flex font-montserrat">
     <div id="page" class="grid md:grid-cols-5 w-screen">
       <main class="px-16 py-6 md:col-span-4">
-        <div class="flex justify-center md:justify-end">
-          <a href="login.html" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Log in</a>
-          <a href="register.html" class="btn text-primary ml-2 border-primary border-2 hover:bg-primary hover:text-white t-ease">Sign up</a>
+        <div class="flex justify-center md:justify-end" id="accountOptions">
+          
         </div>
 
         <header>
@@ -32,5 +31,6 @@
       const currentPage = "imprint";
     </script>
     <script src="navbar.js"></script>
+    <script src="accountOptions.js"></script>
   </body>
 </html>
