--- a/src/settings.html
+++ b/src/settings.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Settings - RealEstateCrawler</title>
     <link href="../dist/output.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css" rel="stylesheet" />
   </head>
   <body class="h-screen flex font-montserrat">
     <div id="page" class="grid md:grid-cols-5 w-screen">
       <main class="px-16 py-6 md:col-span-4 md:max-w-full">
-        <div class="flex md:justify-end">
-          <a href="login.html" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Log in</a>
-          <a href="register.html" class="btn text-primary ml-2 border-primary border-2 hover:bg-primary hover:text-white t-ease">Sign up</a>
+        <div class="flex justify-center md:justify-end" id="accountOptions">
+          
         </div>
 
         <header>
@@ -42,6 +40,7 @@
           const currentPage = "settings";
         </script>
         <script src="navbar.js"></script>
+        <script src="accountOptions.js"></script>
       </main>
     </div>
   </body>
