modified accountOptions.js & centralized API_URL

--- a/src/register.html
+++ b/src/register.html
@@ -61,7 +61,7 @@
       const currentPage = "register";
     </script>
     <script src="navbar.js"></script>
-    <script src="register.js"></script>
+    <script type="module" src="register.js"></script>
     <script src="accountOptions.js"></script>
   </body>
 </html>
