--- a/src/login.html
+++ b/src/login.html
@@ -39,7 +39,7 @@
       const currentPage = "login";
     </script>
     <script src="navbar.js"></script>
-    <script src="login.js"></script>
+    <script type="module" src="login.js"></script>
     <script src="accountOptions.js"></script>
   </body>
 </html>
