css toggle adapted

--- a/src/settings.html
+++ b/src/settings.html
@@ -9,30 +9,26 @@
   <body class="h-screen flex font-montserrat">
     <div id="page" class="grid md:grid-cols-5 w-screen">
       <main class="px-16 py-6 md:col-span-4 md:max-w-full">
-        <div class="flex justify-center md:justify-end" id="accountOptions">
-          
-        </div>
+        <div class="flex justify-center md:justify-end" id="accountOptions"></div>
 
         <header>
           <h2 class="text-gray-800 text-6xl mb-3 font-semibold">Settings</h2>
         </header>
 
         <div class="mb-3">
-          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
             <a href="#">
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Search Agent Name</h5>
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Search Agent Name</h5>
             </a>
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Parameters of search agent</p>
-            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800"> Delete </a>
+            <p class="mb-3 font-normal text-gray-700">Parameters of search agent</p>
+            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300"> Delete </a>
           </div>
         </div>
 
         <label class="relative inline-flex items-center cursor-pointer">
           <input type="checkbox" value="" class="sr-only peer" checked />
-          <div
-            class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-primary"
-          ></div>
-          <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">Receive E-Mail Notifications</span>
+          <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 rounded-full peer peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-primary"></div>
+          <span class="ms-3 text-sm font-medium text-gray-900">Receive E-Mail Notifications</span>
         </label>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 
