--- a/src/imprint.html
+++ b/src/imprint.html
@@ -9,9 +9,7 @@
   <body class="h-screen flex font-montserrat">
     <div id="page" class="grid md:grid-cols-5 w-screen">
       <main class="px-16 py-6 md:col-span-4">
-        <div class="flex justify-center md:justify-end" id="accountOptions">
-          
-        </div>
+        <div class="flex justify-center md:justify-end" id="accountOptions"></div>
 
         <header>
           <h2 class="text-gray-800 text-6xl font-semibold">About Us</h2>
