--- a/src/profile.html
+++ b/src/profile.html
@@ -60,5 +60,6 @@
     </script>
     <script src="navbar.js"></script>
     <script src="accountOptions.js"></script>
+    <script src="profile.js"></script>
   </body>
 </html>
