profile page with hardcoded data

--- a/src/profile.html
+++ b/src/profile.html
@@ -43,16 +43,7 @@
           </form>
         </div>
 
-        <div class="mb-6">
-          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Search Agents</h5>
-          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
-            <a href="#">
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Search Agent Name</h5>
-            </a>
-            <p class="mb-3 font-normal text-gray-700">Parameters of search agent</p>
-            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300"> Delete </a>
-          </div>
-        </div>
+        <div id="searchagentcard"></div>
       </main>
     </div>
     <script>
