added crawlerAgent logic & fetched userData for profile display

--- a/src/index.html
+++ b/src/index.html
@@ -87,5 +87,6 @@
     </script>
     <script src="navbar.js"></script>
     <script src="accountOptions.js"></script>
+    <script type="module" src="crawlerAgent.js"></script>
   </body>
 </html>
