added validation for search agent form

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <form id="searchForm" class="w-full max-w-lg mb-6 mt-4">
             <div class="flex flex-wrap -mx-3 mb-2">
               <div class="w-full px-3">
-                <label for="agentName" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Name for search agent</label>
+                <label for="agentName" class="block text-gray-800 mb-1 uppercase tracking-wide font-bold">Name for search agent*</label>
                 <input type="text" id="agentName" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block w-full mb-2" />
               </div>
             </div>
