added reset button

--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,10 @@
               </div>
             </div>
             <!-- Add other search parameters -->
-
-            <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Create Searchagent</button>
+            <div class="flex justify-between">
+              <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Create Searchagent</button>
+              <button id="resetButton" type="reset" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Reset Form</button>
+            </div>
           </form>
         </div>
       </main>
