added remaining crud operations for search agents

--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,9 @@
                 <select id="state" class="border-2 border-primary border-opacity-50 rounded form-select mt-1 block mb-2 w-full">
                   <option value="" disabled selected>Select Federal Province</option>
                   <option value="Burgenland">Burgenland</option>
-                  <option value="Kärnten">Carinthia</option>
-                  <option value="Niederösterreich">Lower Austria</option>
-                  <option value="Oberösterreich">Upper Austria</option>
+                  <option value="Kaernten">Carinthia</option>
+                  <option value="Niederoesterreich">Lower Austria</option>
+                  <option value="Oberoesterreich">Upper Austria</option>
                   <option value="Salzburg">Salzburg</option>
                   <option value="Steiermark">Styria</option>
                   <option value="Tirol">Tyrol</option>
