--- a/src/profile.html
+++ b/src/profile.html
@@ -56,6 +56,46 @@
           </form>
         </div>
 
+        <div id="my-modal" class="fixed z-10 inset-0 overflow-y-auto hidden">
+          <div class="fixed z-10 inset-0 overflow-y-auto" id="my-modal">
+          <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+              <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+                  <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+              </div>
+              <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+              <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+                  role="dialog" aria-modal="true" aria-labelledby="modal-headline">
+                    <div>
+                      <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-red-100">
+                        <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14v-4h-1v-1h2v5h-1zm0-9a1 1 0 110-2 1 1 0 010 2z" />
+                        </svg>
+                    </div>
+                      <div class="mt-3 text-center sm:mt-5">
+                          <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
+                              Info
+                          </h3>
+                          <div class="mt-2">
+                              <p class="text-sm text-gray-500">
+                                Please stop your search agent before editing it.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="mt-5 sm:mt-6">
+                      <button
+                          class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm"
+                          onclick="closeModal()">
+                          OK
+                      </button>
+                  </div>
+              </div>
+          </div>
+          </div>
+        </div>
+
         <div id="searchagentcard"></div>
       </main>
     </div>
@@ -65,5 +105,11 @@
     <script src="navbar.js"></script>
     <script src="accountOptions.js"></script>
     <script type="module" src="profile.js"></script>
+    <script>
+      function closeModal() {
+        var errorModal = document.getElementById("my-modal");
+        errorModal.classList.add("hidden");
+      }
+    </script>
   </body>
 </html>
