--- a/src/profile.html
+++ b/src/profile.html
@@ -51,8 +51,10 @@
                 <input type="text" id="profileUsername" class="border-2 border-primary border-opacity-50 rounded form-input mt-1 block mb-2 w-full" />
               </div>
             </div>
+            <!-- Buttons for future implementations
             <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Change Password</button>
             <button type="submit" class="btn text-primary border-primary border-2 hover:bg-primary hover:text-white t-ease">Delete Account</button>
+            -->
           </form>
         </div>
 
